# voxcrypt

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  program.md  pyproject.toml
.github/workflows/: ci.yml
assets/: generate_assets.py
configs/: fhe_config.yml  production.env.example
demo/: ablation_study.py  benchmark.py  client.py  encrypted_verify_demo.py  evaluate_model.py  fhe_demo.py  fhe_multi_demo.py  optimize.py  server.py  train_emotion.py  train_encrypted_verify.py  train_gender.py  train_model.py  train_speaker_id.py  web_ui.py
demo/templates/: index.html
speaker_verify/: __init__.py  artifacts.py  augment.py  config.py  dataset.py  emotion.py  error_handlers.py  evaluation.py  features.py  fhe_inference.py  logging_config.py  metrics.py  model.py  resilience.py  security.py  train.py
tests/: conftest.py  test_config.py  test_dataset.py  test_e2e.py  test_evaluation.py  test_features.py  test_fhe_pipeline.py  test_model.py  test_resilience.py  test_security.py  test_server.py
